Refactor configuration scripts and enhance Waybar styling for Matrix theme. Implemented backup functionality in apply_changes.sh, added package installation in pacman_install.sh, and improved Wofi power menu with Matrix-themed options. Updated Waybar config and CSS for better aesthetics and usability, including new module arrangements and hover effects.

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,110 +1,162 @@
+# Hyprlock Configuration File
+# Author: Fernando
+# Description: Matrix-themed lock screen configuration
+# Version: 1.0.0
+
+# Define the font used throughout the lock screen
 $font = JetBrainsMono Nerd Font
 
+# General configuration
 general {
-    hide_cursor = false
-    color = rgb(0, 255, 0)
+    hide_cursor = true           # Hide mouse cursor on lock screen
+    grace = 0                    # No grace period for wrong passwords
+    disable_loading_bar = false  # Show loading bar
+    loading_bar_color = rgb(00ff00)  # Matrix green loading bar
 }
 
+# Background configuration
 background {
-    monitor =
-    path = $HOME/Pictures/lock_wallpapers/evangelion2.png
-    position = center
-    fill_mode = fit
+    monitor =                # Apply to all monitors
+    path = screenshot       # Use current screen as background
+    # Blur and effects
+    blur_passes = 3         # Number of blur passes
+    blur_size = 7          # Blur intensity
+    noise = 0.0117         # Add slight noise
+    contrast = 0.8916      # Adjust contrast
+    brightness = 0.8172    # Adjust brightness
+    vibrancy = 0.1696     # Add color vibrancy
+    vibrancy_darkness = 0.0
 }
 
-animations {
-    enabled = true
-    bezier = linear, 1, 1, 0, 0
-    animation = fadeIn, 1, 5, linear
-    animation = fadeOut, 1, 5, linear
-    animation = inputFieldDots, 1, 2, linear
-}
-
+# Password input field configuration
 input-field {
-    monitor =
-    size = 10%, 3%  # Tamaño más proporcional
-    outline_thickness = 2
-    dots_size = 0.15
-    dots_spacing = 0.1
-    dots_center = true
-    dots_rounding = -1
-    inner_color = rgba(0, 0, 0, 0)
-    outer_color = rgba(00ff00cc)
-    check_color = rgba(00ff00dd)
-    fail_color = rgba(ff0033dd)
-    font_color = rgb(00ff00)
-    fade_on_empty = false
-    rounding = 10
-    font_family = $font
-    placeholder_text = Password...
-    fail_text = $PAMFAIL
-    font_size = 25  # Ajuste de fuente proporcional
-    position = 0, 80  # Centrado y separado de los labels
-    halign = center
-    valign = center
+    monitor =               # Apply to all monitors
+    size = 250, 50         # Input field dimensions
+    outline_thickness = 2   # Border thickness
+    dots_size = 0.2        # Password dot size
+    dots_spacing = 0.2     # Space between dots
+    dots_center = true     # Center the dots
+    dots_rounding = 10     # Round the dots
+    outer_color = rgb(00ff00)  # Matrix green border
+    inner_color = rgba(0, 0, 0, 0.5)  # Semi-transparent background
+    font_color = rgb(00ff00)  # Matrix green text
+    fade_on_empty = true   # Fade effect when empty
+    placeholder_text = <i>Enter Password...</i>  # Placeholder text
+    hide_input = false     # Show password dots
+    rounding = 10          # Corner rounding
+    check_color = rgb(00ff00)  # Success color
+    fail_color = rgb(ff0000)   # Error color
+    fail_text = <i>Authentication Failed!</i>  # Error message
+    fail_transition = 300  # Error animation duration
+    capslock_color = rgb(00ff00)  # Caps lock indicator
+    numlock_color = rgb(00ff00)   # Num lock indicator
+    bothlock_color = rgb(00ff00)  # Both locks indicator
+    invert_numlock = false        # Normal numlock display
+    position = 0, 0        # Centered position
+    halign = center        # Horizontal alignment
+    valign = center        # Vertical alignment
 }
 
-# TIME
+# Time display
 label {
-    monitor =
-    text = $TIME
-    font_size = 40  # Uniforme con input-field
-    font_family = $font
-    font_color = rgb(00ff00)
-    color = rgb(0, 255, 0)
-    position = 0, -120
-    halign = center
-    valign = center
-    shadow_passes = 5
-    shadow_size = 10
+    monitor =              # Apply to all monitors
+    text = cmd[update:1000] echo "$(date '+%H:%M:%S')"  # Update every second
+    color = rgb(00ff00)    # Matrix green color
+    font_size = 65         # Large time display
+    font_family = $font    # Use defined font
+    position = 0, -180     # Position above center
+    halign = center        # Center horizontally
+    valign = center        # Center vertically
 }
 
-# DATE
+# Date display
 label {
-    monitor =
-    text = cmd[update:60000] date +"%A, %d %B %Y"
-    font_size = 30  # Ligero ajuste para contraste
-    font_family = $font
-    font_color = rgb(00ff00)
-    color = rgb(0, 255, 0)
-    position = 0, -60
-    halign = center
-    valign = center
-    shadow_passes = 5
-    shadow_size = 10
+    monitor =              # Apply to all monitors
+    text = cmd[update:1000] echo "$(date '+%A, %d %B %Y')"  # Full date format
+    color = rgb(00ff00)    # Matrix green color
+    font_size = 25         # Medium size font
+    font_family = $font    # Use defined font
+    position = 0, -120     # Position below time
+    halign = center        # Center horizontally
+    valign = center        # Center vertically
 }
 
-# USER
+# Welcome message
 label {
-    monitor =
-    text = $USER
-    font_size = 30
-    font_family = $font
-    font_color = rgb(00ff00)
-    color = rgb(0, 255, 0)
-    position = 0, 0
-    halign = center
-    valign = center
-    shadow_passes = 5
-    shadow_size = 10
+    monitor =              # Apply to all monitors
+    text = Welcome back, $USER  # Personalized greeting
+    color = rgb(00ff00)    # Matrix green color
+    font_size = 20         # Smaller font size
+    font_family = $font    # Use defined font
+    position = 0, -60      # Position below date
+    halign = center        # Center horizontally
+    valign = center        # Center vertically
 }
 
-image {
-    monitor =
-    path = $HOME/Pictures/epictechno.png
-    size = 200  # Más proporcional al nuevo diseño
-    rounding = -1
-    border_size = 3
-    border_color = rgb(0, 255, 0)
-    rotate = 0
-    reload_time = -1
-    position = 0, 250
-    halign = center
-    valign = center
+# Instructions text
+label {
+    monitor =              # Apply to all monitors
+    text = Type to unlock...  # User instruction
+    color = rgb(00ff00)    # Matrix green color
+    font_size = 16         # Small font size
+    font_family = $font    # Use defined font
+    position = 0, 60       # Position below input
+    halign = center        # Center horizontally
+    valign = center        # Center vertically
 }
 
-# Idea adicional Matrix: efecto glitch suave para texto
+# Left Matrix rain effect
+label {
+    monitor =              # Apply to all monitors
+    # Generate random characters for Matrix effect
+    text = cmd[update:100] echo "$(tr -dc 'A-Za-z0-9' < /dev/urandom | head -c 50 | fold -w 1)"
+    color = rgba(0, 255, 0, 0.3)  # Semi-transparent green
+    font_size = 20         # Medium font size
+    font_family = $font    # Use defined font
+    position = -45%, -40%  # Left side position
+    halign = left         # Left alignment
+    valign = top          # Top alignment
+}
+
+# Right Matrix rain effect
+label {
+    monitor =              # Apply to all monitors
+    # Generate random characters for Matrix effect
+    text = cmd[update:100] echo "$(tr -dc 'A-Za-z0-9' < /dev/urandom | head -c 50 | fold -w 1)"
+    color = rgba(0, 255, 0, 0.3)  # Semi-transparent green
+    font_size = 20         # Medium font size
+    font_family = $font    # Use defined font
+    position = 45%, -40%   # Right side position
+    halign = right        # Right alignment
+    valign = top          # Top alignment
+}
+
+# System information display
+label {
+    monitor =              # Apply to all monitors
+    # Show CPU and RAM usage
+    text = cmd[update:5000] echo "CPU: $(top -bn1 | grep "Cpu(s)" | awk '{print $2}')% | RAM: $(free -h | awk '/^Mem/ {print $3}')"
+    color = rgb(00ff00)    # Matrix green color
+    font_size = 14         # Small font size
+    font_family = $font    # Use defined font
+    position = 0, 100      # Position at bottom
+    halign = center        # Center horizontally
+    valign = center        # Center vertically
+}
+
+# Animation configuration
 animations {
-    animation = glitch, 1, 3, linear
+    enabled = true         # Enable animations
+    # Animation curves
+    bezier = overshot, 0.05, 0.9, 0.1, 1.1
+    bezier = smoothOut, 0.36, 0, 0.66, -0.56
+    bezier = smoothIn, 0.25, 1, 0.5, 1
+
+    # Define animations
+    animation = fade, 1, 5, smoothIn          # Fade in/out
+    animation = slide, 1, 5, smoothOut        # Sliding effects
+    animation = border, 1, 10, default        # Border animations
+    animation = workspaces, 1, 5, overshot    # Workspace transitions
+    animation = windows, 1, 5, overshot       # Window animations
 }
 
