--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,141 +1,142 @@
+# Configuration file for Hyprland
+# Author: Fernando
+# Description: Matrix-themed configuration for Hyprland window manager
+# Version: 1.0.0
 
 ### MONITORS ###
-
+# Configuration for display setup and arrangement
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,3840x2160,auto,auto
 
-### MY PROGRAMS ###
-
+### APPLICATIONS ###
+# Definition of commonly used applications and their launch commands
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
-# Set programs that you use
+# Core applications
 $terminal = kitty
 $fileManager = nemo
-$menu = wofi --show drun --width 400 --style ~/.config/wofi/themes/matrix.css
+$menu = wofi --show drun --width 600 --height 400 --style ~/.config/wofi/themes/matrix.css --prompt "Run Application" --normal-window --allow-images --hide-scroll --no-actions
 
 ### AUTOSTART ###
+# Programs and services that should start automatically with Hyprland
+# Format: exec-once = command [arguments]
 
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-#exec-once = $terminal
-# exec-once = nm-applet &
-#exec-once = ~/waybar/launch.sh
 exec-once = waybar & hyprpaper
-#exec-once = google-chrome-stable
+exec-once = hyprlock # Lock screen at startup
+exec-once = swayidle -w \
+    timeout 300 'hyprlock' \
+    timeout 600 'hyprctl dispatch dpms off' \
+    resume 'hyprctl dispatch dpms on' \
+    before-sleep 'hyprlock'
 
 ### ENVIRONMENT VARIABLES ###
-
+# System-wide environment variable configuration
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
-### LOOK AND FEEL ###
+### APPEARANCE AND BEHAVIOR ###
+# Visual and behavioral settings for the window manager
+# See https://wiki.hyprland.org/Configuring/Variables/
 
-# Refer to https://wiki.hyprland.org/Configuring/Variables/
-
-# https://wiki.hyprland.org/Configuring/Variables/#general
+# General window manager settings
 general {
-    gaps_in = 1
-    gaps_out = 0
+    # Window gap settings
+    gaps_in = 1      # Inner gaps between windows
+    gaps_out = 0     # Outer gaps around screen edges
 
-    border_size = 1
+    # Border configuration
+    border_size = 1  # Width of window borders
 
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(43ff64f9)
-    col.inactive_border = rgba(ff0000d9)
+    # Border colors - Matrix theme
+    col.active_border = rgba(43ff64f9)    # Active window border color
+    col.inactive_border = rgba(ff0000d9)   # Inactive window border color
 
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
-
-    layout = dwindle
+    # Window interaction settings
+    resize_on_border = false  # Disable window resizing by dragging borders
+    allow_tearing = false    # Disable screen tearing
+    layout = dwindle        # Default layout mode
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
+# Window decoration settings
 decoration {
-    rounding = 3
+    # Visual enhancements
+    rounding = 3  # Corner rounding radius
 
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    # Window opacity settings
+    active_opacity = 1.0    # Opacity for focused windows
+    inactive_opacity = 1.0  # Opacity for unfocused windows
 
-    # drop_shadow = true
-    # shadow_range = 4
-    # shadow_render_power = 3
-    # col.shadow = rgba(1a1a1aee)
-
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
+    # Blur effect configuration
     blur {
-        enabled = true
-        size = 3
-        passes = 1
-        vibrancy = 0.1696
+        enabled = true     # Enable background blur
+        size = 3          # Blur intensity
+        passes = 1        # Number of blur passes
+        vibrancy = 0.1696 # Color vibrancy in blur
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#animations
+# Animation configuration
 animations {
-    enabled = true
+    enabled = true  # Enable window animations
 
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
+    # Animation curves
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    # Animation definitions
+    animation = windows, 1, 7, myBezier      # Window open/close
+    animation = windowsOut, 1, 7, default    # Window minimize/restore
+    animation = border, 1, 10, default       # Border color changes
+    animation = borderangle, 1, 8, default   # Border angle animations
+    animation = fade, 1, 7, default         # Fade effects
+    animation = workspaces, 1, 6, default   # Workspace transitions
 }
 
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
+# Layout configuration
 dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
+    pseudotile = true        # Enable pseudo-tiling
+    preserve_split = true    # Maintain window splits
 }
 
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    new_status = master
+    new_status = master     # Default new window position
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#misc
+# Miscellaneous settings
 misc {
-    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0  # Disable default wallpapers
+    disable_hyprland_logo = true # Disable Hyprland logo
 }
 
-### INPUT ###
+### INPUT CONFIGURATION ###
+# Input device settings and behavior
+# See https://wiki.hyprland.org/Configuring/Variables/#input
 
-# https://wiki.hyprland.org/Configuring/Variables/#input
 input {
+    # Keyboard settings
     kb_layout = us
     kb_variant =
     kb_model =
     kb_options =
     kb_rules =
 
+    # Mouse behavior
     follow_mouse = 1
+    sensitivity = 0  # Base mouse sensitivity
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
+    # Touchpad configuration
     touchpad {
         natural_scroll = false
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
+# Gesture configuration
 gestures {
-    workspace_swipe = false
+    workspace_swipe = false  # Disable workspace swipe gestures
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
+# Device-specific settings
 device {
     name = epic-mouse-v1
     sensitivity = 0
@@ -147,31 +148,30 @@ device {
     accel_profile = flat
 }
 
-
-###################
 ### KEYBINDINGS ###
-###################
-
+# Keyboard shortcuts and controls
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+$mainMod = SUPER  # Define main modifier key (Windows key)
+
+# Application launchers
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, P, pseudo,
+bind = $mainMod, J, togglesplit,
+bind = $mainMod, L, exec, hyprlock  # Lock screen shortcut
 
-# Move focus with mainMod + arrow keys
+# Window focus controls
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
-# Switch workspaces with mainMod + [0-9]
+# Workspace management
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -183,7 +183,7 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
+# Window movement to workspaces
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -196,19 +196,19 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod SHIFT, B, exec, ~/waybar/launch.sh
 
-# Example special workspace (scratchpad)
+# Special workspace (scratchpad) controls
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
-# Scroll through existing workspaces with mainMod + scroll
+# Mouse-based workspace navigation
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
+# Window movement and resizing with mouse
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Laptop multimedia keys for volume and LCD brightness
+# Multimedia key bindings
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
@@ -216,31 +216,22 @@ bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
-# Requires playerctl
+# Media player controls
 bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
+### WINDOW RULES ###
+# Window-specific behaviors and properties
+# See https://wiki.hyprland.org/Configuring/Window-Rules/
 
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
-# Ignore maximize requests from apps. You'll probably like this.
+# Prevent windows from maximizing
 windowrulev2 = suppressevent maximize, class:.*
 
-# Fix some dragging issues with XWayland
+# XWayland focus fix
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-
+# Keyboard layout
 env = XKB_DEFAULT_LAYOUT, us
 
